--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
     container: mcr.microsoft.com/ccf/app/dev:lts-devcontainer
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Build enclave container
         run: docker build -t ccf-app-template:enclave -f docker/ccf_app.enclave .
 
