--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,16 @@ jobs:
       - name: Build app
         run: mkdir -p build && cd build && CC="/opt/oe_lvi/clang-10" CXX="/opt/oe_lvi/clang++-10" cmake -GNinja .. && ninja
 
-      - name: Build container
-        run: docker build -t ccf-app-template .
+  build-containers:
+    runs-on: ubuntu-20.04
+    container: mcr.microsoft.com/ccf/app/dev:lts-devcontainer
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Build enclave container
+        run: docker build -t ccf-app-template:enclave -f docker/ccf_app.enclave .
+
+      - name: Build virtual container
+        run: docker build -t ccf-app-template:virtual -f docker/ccf_app.virtual .
