--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build enclave container
+      - name: Build C++ enclave container
         run: docker build -t ccf-app-template:cpp-enclave -f docker/ccf_app_cpp.enclave .
 
-      - name: Build virtual container
+      - name: Build C++ virtual container
         run: docker build -t ccf-app-template:cpp-virtual -f docker/ccf_app_cpp.virtual .
+
+      - name: Build JS enclave container
+        run: docker build -t ccf-app-template:js-enclave -f docker/ccf_app_js.enclave .
+
+      - name: Build JS virtual container
+        run: docker build -t ccf-app-template:js-virtual -f docker/ccf_app_js.virtual .
