--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build-app:
+  build-cpp-app:
     runs-on: ubuntu-20.04
     container: mcr.microsoft.com/ccf/app/dev:lts-devcontainer
 
@@ -17,6 +17,7 @@ jobs:
 
       - name: Build app
         run: mkdir -p build && cd build && CC="/opt/oe_lvi/clang-10" CXX="/opt/oe_lvi/clang++-10" cmake -GNinja .. && ninja
+        working-directory: cpp
 
   build-containers:
     runs-on: ubuntu-20.04
@@ -26,8 +27,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build enclave container
-        run: docker build -t ccf-app-template:enclave -f docker/ccf_app.enclave .
+      - name: Build C++ enclave container
+        run: docker build -t ccf-app-template:cpp-enclave -f docker/ccf_app_cpp.enclave .
 
-      - name: Build virtual container
-        run: docker build -t ccf-app-template:virtual -f docker/ccf_app.virtual .
+      - name: Build C++ virtual container
+        run: docker build -t ccf-app-template:cpp-virtual -f docker/ccf_app_cpp.virtual .
+
+      - name: Build JS enclave container
+        run: docker build -t ccf-app-template:js-enclave -f docker/ccf_app_js.enclave .
+
+      - name: Build JS virtual container
+        run: docker build -t ccf-app-template:js-virtual -f docker/ccf_app_js.virtual .
