--- a/js/package.json
+++ b/js/package.json
@@ -10,19 +10,12 @@
     "node": ">=14"
   },
   "dependencies": {
-    "@microsoft/ccf-app": "^3.0.0-dev4",
-    "js-base64": "^3.5.2",
-    "jsrsasign": "^10.0.4",
-    "jsrsasign-util": "^1.0.2",
-    "jwt-decode": "^3.0.0",
-    "lodash-es": "^4.17.15",
-    "protobufjs": "^6.10.1"
+    "@microsoft/ccf-app": "^3.0.0-dev4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "del-cli": "^3.0.1",
-    "http-server": "^0.13.0",
     "rollup": "^2.41.0"
   }
 }
