--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "Development Container for CCF C++ Apps",
   "context": "..",
-  "image": "mcr.microsoft.com/ccf/app/dev:lts-devcontainer",
+  "build": { "dockerfile": "Dockerfile" },
   "runArgs": [],
   "extensions": [
     "ms-vscode.cpptools",
