--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,10 @@
   "extensions": [
     "ms-vscode.cpptools",
     "vsls-contrib.codetour"
-  ]
+  ],
+  "features": {
+    "ghcr.io/devcontainers/features/docker-from-docker:1": {
+      "version": "20.10.8"
+    }
+  }
 }
