--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-cpp-app:
     runs-on: ubuntu-20.04
-    container: mcr.microsoft.com/ccf/app/dev:lts-devcontainer
+    container: mcr.microsoft.com/ccf/app/dev:3.0.0-dev6-sgx
 
     steps:
       - name: Checkout repository
@@ -21,7 +21,7 @@ jobs:
 
   build-containers:
     runs-on: ubuntu-20.04
-    container: mcr.microsoft.com/ccf/app/dev:lts-devcontainer
+    container: mcr.microsoft.com/ccf/app/dev:3.0.0-dev6-sgx
 
     steps:
       - name: Checkout repository
