--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,3 @@
-FROM mcr.microsoft.com/ccf/app/dev:3.0.0-rc2-virtual
+FROM mcr.microsoft.com/ccf/app/dev:3.0.1-virtual
 
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash - && sudo apt-get install -y nodejs
