--- a/config/cchost_config_virtual_js.json
+++ b/config/cchost_config_virtual_js.json
@@ -1,7 +1,8 @@
 {
     "enclave": {
       "file": "/usr/lib/ccf/libjs_generic.virtual.so",
-      "type": "Virtual"
+      "type": "Virtual",
+      "platform": "Virtual"
     },
     "network": {
       "node_to_node_interface": { "bind_address": "127.0.0.1:8081" },
