--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,35 +9,35 @@ on:
 jobs:
   build-cpp-app-sgx:
     runs-on: ubuntu-20.04
-    container: mcr.microsoft.com/ccf/app/dev:3.0.1-sgx
+    container: mcr.microsoft.com/ccf/app/dev:4.0.14-sgx
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Build app (SGX)
-        run: mkdir -p build && cd build && CC="/opt/oe_lvi/clang-10" CXX="/opt/oe_lvi/clang++-10" cmake -GNinja -DCOMPILE_TARGET=sgx .. && ninja
+        run: mkdir -p build && cd build && CC="clang-11" CXX="clang++-11" cmake -GNinja -DCOMPILE_TARGET=sgx .. && ninja
         working-directory: cpp
 
   build-cpp-app-virtual:
     runs-on: ubuntu-20.04
-    container: mcr.microsoft.com/ccf/app/dev:3.0.1-virtual
+    container: mcr.microsoft.com/ccf/app/dev:4.0.14-virtual
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Build app (virtual)
-        run: mkdir -p build && cd build && CC="$(which clang-10)" CXX="$(which clang++-10)" cmake -GNinja -DCOMPILE_TARGET=virtual .. && ninja
+        run: mkdir -p build && cd build && CC="$(which clang-15)" CXX="$(which clang++-15)" cmake -GNinja -DCOMPILE_TARGET=virtual .. && ninja
         working-directory: cpp
 
   build-containers:
     runs-on: ubuntu-20.04
-    container: mcr.microsoft.com/ccf/app/dev:3.0.1-sgx
+    container: mcr.microsoft.com/ccf/app/dev:4.0.14-sgx
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Build C++ enclave container
         run: docker build -t ccf-app-template:cpp-enclave -f docker/ccf_app_cpp.enclave .
