--- a/js/package.json
+++ b/js/package.json
@@ -15,7 +15,10 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-typescript": "^11.1.6",
     "del-cli": "^3.0.1",
-    "rollup": "^2.41.0"
+    "rollup": "^2.41.0",
+    "tslib": "^2.6.3",
+    "typescript": "^5.4.5"
   }
 }
