fix package json

--- a/js/package.json
+++ b/js/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2
+    "@rollup/plugin-node-resolve": "^15.2",
     "@rollup/plugin-typescript": "^11.1.6",
     "del-cli": "^5.1.0",
     "rollup": "^2.41.0",
